<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:orientation="vertical"
    tools:context=".Resultado">

    <TextView
        android:id="@+id/tv_idade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/idade"
        />

    <EditText
        android:id="@+id/et_idade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        />

    <TextView
        android:id="@+id/tv_sexo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sexo"
        />

    <RadioGroup
        android:id="@+id/rg_sexo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:checkedButton="@id/rb_masculino">

        <RadioButton
            android:id="@+id/rb_masculino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/masculino" />

        <RadioButton
            android:id="@+id/rb_feminino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feminino" />
    </RadioGroup>

    <TextView
        android:id="@+id/tv_escolaridade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/escolaridade"
        />

    <Spinner
        android:id="@+id/sp_escolaridade"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        />

    <TextView
        android:id="@+id/tv_possui_casa_propria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/possui_casa_pr_pria"
        />

    <RadioGroup
        android:id="@+id/rg_possui_casa_propria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:checkedButton="@id/rb_possui_casa_propria_sim">

        <RadioButton
            android:id="@+id/rb_possui_casa_propria_sim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sim" />

        <RadioButton
            android:id="@+id/rb_possui_casa_propria_nao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/n_o" />
    </RadioGroup>

    <Button
        android:id="@+id/bt_confirmar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:text="@string/confirmar"
        android:onClick="confirmarVoto"/>
</LinearLayout>